--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        
         <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> --> 
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" type="text/css" href="landingpagestyle.css">
+        <!-- <link rel="stylesheet" type="text/css" href="landingpagestyle.css"> -->
     </head>
     <body>
         <div class="container d-flex align-items-center h-100">
